[package]
name = "obd"
version = "0.1.0"
description = "Utilities for working with vehicle on-board diagnostics"
license = "MIT"
authors = ["Altenius <jacobjm18@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
