[package]
name = "obd"
version = "0.1.3"
description = "Utilities for working with vehicle on-board diagnostics"
repository = "https://github.com/Altenius/obd-rs"
keywords = ["cars", "tuning", "OBD-II", "can"]
categories = ["network-programming", ]
readme = "README.md"
license = "MIT"
authors = ["Jacob Manning <jacobjm18@gmail.com>"]
edition = "2018"

[features]
default = ["passthru"]

# Enabled SAE J2534 PassThru support
passthru = ["j2534"]

[dependencies]
thiserror = "1.0.14"
j2534 = {version = "0.3.1", optional = true}
socketcan = {version = "1.7", optional = true}

[[example]]
path = "examples/passthru.rs"
name = "passthru"